<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/linearlayoutid"
    android:layout_height="70sp"
    android:weightSum="2"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/productid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_weight="1"
        android:text="@string/productname"
        android:textSize="20sp"></TextView>
    <TextView
        android:id="@+id/quantityid"
        android:layout_marginTop="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginLeft="200sp"
        android:text="@string/quantity">

    </TextView>
</LinearLayout>

    <TextView
        android:id="@+id/priceid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/pricetextrow"
        android:textSize="20sp"></TextView>

   </LinearLayout>