<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100sp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/AliceBlue"
    app:cardCornerRadius="20sp"
    android:padding="10sp">

    <LinearLayout
        android:id="@+id/linearlayoutid"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hproductid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_weight="1"
                android:text="@string/productname"
                android:textSize="20sp"></TextView>

            <TextView
                android:id="@+id/hquantityid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200sp"
                android:layout_marginTop="10sp"
                android:text="@string/quantity"
                android:textSize="20sp">

            </TextView>
        </LinearLayout>

        <TextView
            android:id="@+id/hpriceid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pricetextrow"
            android:textSize="20sp"></TextView>

    </LinearLayout>

</androidx.cardview.widget.CardView>